# CS5330

FinalProject/ImageDetectionServer/: app.py  detector.py  driver.py
HW1/: a.out  pow_test.cpp
P1/: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  README.md  VidDisplay  cmake_install.cmake  filter.cpp  filter.h  filters.cpp  imgDisplay.cpp  readme.txt  report01.md  vidDisplay.cpp
P2/: .gitignore  CMakeLists.txt  ImgFeature.cpp  ImgMetric.cpp  MetricNode.cpp  README.md  dbReader.cpp  dbReader.h  filters.cpp  filters.h  imageOps.cpp  imageOps.h  imgFeatures.cpp  imgFeatures.h  imgMetrics.cpp  imgMetrics.h  imgSearch.cpp  readme.txt  report02.md
P3/: .gitignore  CMakeLists.txt  README.md  boundingBox.cpp  classify.cpp  classify.h  controller.cpp  controller.h  database.cpp  database.h  feature.cpp  feature.h  features.h  imgController.cpp  init.cpp  init.h  knnClassify.cpp  label.cpp  label.h  moments.cpp  or2d.cpp  or2d.h  or2dEngine.h  orController.cpp  orController.h  pipeline.h  readme.txt  regionFeatures.cpp  report03.html  report03.md  segment.cpp  segment.h  threshold.cpp  threshold.h  twoPassSegment.cpp  videoController.cpp
P3/labels/: coaster.lbl  controller.lbl  flipflop  flipflop.lbl  glove.lbl  h.lbl  hat.lbl  headphones.lbl  phone.lbl  rectangle  remote.lbl  shoe.lbl  speaker.lbl
P4/: .gitignore  CMakeLists.txt  HarrisCorners  README.md  ar.cpp  calibration.h  command.h  controller.h  harrisCorners.cpp  readme.txt  report04.html  report04.md
P4/commands/: calibrateCmd.cpp  commands.h  drawCornersCmd.cpp  loadCalibrationCmd.cpp  loadCalibratorCmd.cpp  projectObjectCmd.cpp  registerFrameCmd.cpp  saveCalibrationCmd.cpp  saveCalibratorCmd.cpp  showImgCmd.cpp  solvePnPCmd.cpp
P4/controllers/: calibrationController.cpp  controller.h  controllers.h  projectionController.cpp
P4/files/: one.calibration  one.samples  params
P4/models/: calibration.h  calibrator.cpp  models.h  projector.cpp
P4/objects/: objects3d.h  truck.cpp
P4/utils/: input.cpp  utils.cpp  utils.h
P4/views/: calibrationView.cpp  cameraMatrixView.cpp  carView.cpp  cornersView.cpp  harrisCornersView.cpp  objectView.cpp  poseView.cpp  view.h  views.h
P5/: analyze.py  classify.py  evaluate.py  greek_dataset.py  greek_embeddings.py  greek_evaluate.py  mnist_evaluate.py  mnist_experiment.py  mnist_train.py  mnist_visualize.py  readme.txt  report05.html  report05.md  train.py  visualize.py
P5/data/greek/: embeddings.csv  labels.csv  pixels.csv
P5/model/: saved_model.pb
P5/model/variables/: variables.index
P5/models/mnist/: saved_model.pb
P5/models/mnist/variables/: variables.index
